--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/06_player_death_build.x86_64"
+export_path="exports/07_player_spawn.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
